# ciopen

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Pipfile  README.md  pyproject.toml  run-checks.sh  run-tests.sh
.github/workflows/: build.yml  bump-version.yml  checks.yml  ci.yml  lint-tests.yml  publish.yml  pypi-publish.yml
scripts/: run-checks.sh
src/ciopen/: __init__.py  cli.py  detector.py  git.py  opener.py
src/ciopen/commands/: doctor.py  info.py  open.py  pr.py  provider.py  repo.py  version.py
src/ciopen/providers/: azure_devops.py  base.py  bitbucket.py  github.py  gitlab.py
tests/integration/: conftest.py  test_browser_opener.py  test_git_detection.py  test_print.py  test_provider_azure_devlops_detection.py  test_provider_bitbucket_detection.py  test_provider_github_detection.py  test_provider_gitlab_detection.py  test_version_print.py
tests/unit/: test_cli.py  test_detector.py  test_git.py  test_opener.py
tests/unit/commands/: test_doctor.py  test_info.py  test_open.py  test_pr.py  test_provider.py  test_repo.py  test_version.py
tests/unit/providers/: test_azure_devops.py  test_bitbucket.py  test_github.py  test_gitlab.py
