# Build system
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Project metadata
[project]
name = "ciopen"
version = "0.0.7"
description = "Open CI pipelines from your current Git repository"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Mel Cadano", email = "mel.cdn@outlook.ph" },
]

requires-python = ">=3.11"
dependencies = [
    "typer>=0.24.1"
]

# CLI entry points
[project.scripts]
ciopen = "ciopen.cli:app"

# Dev dependencies
[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pre-commit==4.5.1",
    "conventional-pre-commit==4.4.0",
]

# Semantic versioning
[tool.semantic_release]
branch = "main"
version_source = "tag"
major_on_zero = false
allow_zero_version = true
upload_to_pypi = false
changelog_file = "CHANGELOG.md"
commit_message = "✨ Bump to version {version}"
commit_parser = "conventional"

version_toml = [
    "pyproject.toml:project.version",
]

# Optional: override commit parsing
[tool.semantic_release.commit_parser_options]
patch_tags = ["fix", "chore", "docs", "style", "refactor", "test", "ci"]
minor_tags = ["feat"]
# Will never be used while major_on_zero = false
major_tags = []
