# -----------------------------
# Build system
# -----------------------------
[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

# -----------------------------
# Project metadata (PyPI)
# -----------------------------
[project]
name = "ciopen"
version = "0.1.2"
description = "Open CI pipelines from your current Git repository"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Mel Cadano", email = "mel.cdn@outlook.ph" }
]
requires-python = ">=3.11"

keywords = ["cli", "ci", "github-actions", "devtools", "automation"]


classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.12"
]

# -----------------------------
# CLI entry point
# -----------------------------
[project.scripts]
ciopen = "ciopen.cli:app"

# -----------------------------
# Project links (shown on PyPI)
# -----------------------------
[project.urls]
Homepage = "https://github.com/mel-cdn/ciopen"
Repository = "https://github.com/mel-cdn/ciopen"
Issues = "https://github.com/mel-cdn/ciopen/issues"
Changelog = "https://github.com/mel-cdn/ciopen/blob/main/CHANGELOG.md"

# -----------------------------
# Optional Dev dependencies
# -----------------------------
[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pre-commit==4.5.1",
    "conventional-pre-commit==4.4.0",
]

# -----------------------------
# Semantic Release Configuration
# -----------------------------
[tool.semantic_release]
branch = "main"
version_source = "tag"
allow_zero_version = true
upload_to_pypi = false
changelog_file = "CHANGELOG.md"
commit_message = "✨ Bump to version {version}"
commit_parser = "conventional"

version_toml = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.commit_parser_options]
patch_tags = ["fix", "chore", "docs", "style", "refactor", "test"]
minor_tags = ["feat"]
major_tags = ["feat!"]
